# OpsBrain

./: .gitignore  LICENSE  README.md  add_agent_backend.py  add_topo_backend.py  build.bat  build_final.py  build_nginx.bat  build_nginx.py  build_remote.py  build_web.py  check.py  debug.py  deploy.py  deploy2.py  scripts
agent/: oobm-topology-skill.md
docs/: opsbrain-v2-design.md
oobm-topology/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
oobm-topology/config/: collector.yml  vendors.yml
oobm-topology/src/opsbrain_oobm/: cli.py  config.py  logging_setup.py
oobm-topology/src/opsbrain_oobm/collector/: engine.py  pool.py  session.py
oobm-topology/src/opsbrain_oobm/inventory/: commands.py  loader.py  models.py  validator.py
oobm-topology/src/opsbrain_oobm/model/: client.py  config.py
oobm-topology/src/opsbrain_oobm/orchestrator/: pipeline.py  state_machine.py
oobm-topology/src/opsbrain_oobm/parser/: engine.py
oobm-topology/src/opsbrain_oobm/parser/textfsm_templates/: cisco_show_arp.textfsm  cisco_show_cdp_neighbors_detail.textfsm  cisco_show_ip_interface_brief.textfsm  cisco_show_lldp_neighbors_detail.textfsm  cisco_show_mac_address_table.textfsm
oobm-topology/src/opsbrain_oobm/topology/: builder.py  diff.py  linker.py  renderer.py
web/: .dockerignore  Dockerfile
web/backend/: Dockerfile  logging_setup.py  requirements.txt
web/backend/app/: auth.py  bot_manager.py  database.py  feishu_bot.py  (+3 more)
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/nginx/: Dockerfile  opsbrain.conf
(+30 files in other folders)
